--- a/index.html
+++ b/index.html
@@ -9,42 +9,77 @@
     <title>Frontend Mentor | Social proof section</title>
 </head>
 <body>
-    <div>
-        <header>
-            <h1>
+    <div class="container">
+        <header class="header">
+            <h1 class="header__title">
                 10,000+ of our users love our products.
             </h1>
-            <p>
+            <h2 class="header__subtitle">
                 We only provide great products combined with excellent customer service.
                 See what our satisfied customers are saying about our services.
-            </p>
+            </h2>
         </header>
-        <aside>
-            Rated 5 Stars in Reviews
-            Rated 5 Stars in Report Guru
-            Rated 5 Stars in BestTech
+        <aside class="recommend">
+            <ul class="recommend__list">
+                <li class="recommend__item">
+                    <span class="recommend__item--star">&#9733; &#9733; &#9733; &#9733; &#9733;</span> Rated 5 Stars in Reviews
+                </li>
+                <li class="recommend__item">
+                    <span class="recommend__item--star">&#9733; &#9733; &#9733; &#9733; &#9733;</span> Rated 5 Stars in Report Guru
+                </li>
+                <li class="recommend__item">
+                    <span class="recommend__item--star">&#9733; &#9733; &#9733; &#9733; &#9733;</span> Rated 5 Stars in BestTech
+                </li>
+            </ul>
         </aside>
-        <article>
-            <section>
-                Colton Smith
-                Verified Buyer
-                "We needed the same printed design as the one we had ordered a week prior.
-                Not only did they find the original order, but we also received it in time.
-                Excellent!"
+        <article class="article">
+            <section class="article__item">
+                <header class="article__header">
+                    <img src="images/image-colton.jpg" alt="Colton Smith">
+                    <h1>
+                        Colton Smith
+                    </h1>
+                    <h2>
+                        Verified Buyer
+                    </h2>
+                </header>
+                <p class="article__about">
+                    "We needed the same printed design as the one we had ordered a week prior.
+                    Not only did they find the original order, but we also received it in time.
+                    Excellent!"
+                </p>
             </section>
     
-            <section>
-                Irene Roberts
-                Verified Buyer
-                "Customer service is always excellent and very quick turn around. Completely
-                delighted with the simplicity of the purchase and the speed of delivery."
+            <section class="article__item">
+                <header class="article__header">
+                    <img src="images/image-irene.jpg" alt="Irene Roberts">
+                    <h1>
+                        Irene Roberts
+                    </h1>
+                    <h2>
+                        Verified Buyer
+                    </h2>
+                </header>
+                <p class="article__about">
+                    "Customer service is always excellent and very quick turn around. Completely
+                    delighted with the simplicity of the purchase and the speed of delivery."
+                </p>
             </section>
     
-            <section>
-                Anne Wallace
-                Verified Buyer
-                "Put an order with this company and can only praise them for the very high
-                standard. Will definitely use them again and recommend them to everyone!"
+            <section class="article__item">
+                <header class="article__header">
+                    <img src="images/image-anne.jpg" alt="Anne Wallace">
+                    <h1>
+                        Anne Wallace
+                    </h1>
+                    <h2>
+                        Verified Buyer
+                    </h2>
+                </header>
+                <p class="article__about">
+                    "Put an order with this company and can only praise them for the very high
+                    standard. Will definitely use them again and recommend them to everyone!"
+                </p>
             </section>
         </article>
     </div>
