remove tags in scss

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <article class="article">
             <section class="article__item">
                 <header class="article__header">
-                    <img src="images/image-colton.jpg" alt="Colton Smith">
-                    <h1>
+                    <img class="comment__img" src="images/image-colton.jpg" alt="Colton Smith">
+                    <h1 class="comment__title">
                         Colton Smith
                     </h1>
-                    <h2>
+                    <h2 class="comment__verified">
                         Verified Buyer
                     </h2>
                 </header>
@@ -51,12 +51,12 @@
             </section>
     
             <section class="article__item">
-                <header class="article__header">
-                    <img src="images/image-irene.jpg" alt="Irene Roberts">
-                    <h1>
+                <header class="article__header comment">
+                    <img class="comment__img" src="images/image-irene.jpg" alt="Irene Roberts">
+                    <h1 class="comment__title">
                         Irene Roberts
                     </h1>
-                    <h2>
+                    <h2 class="comment__verified">
                         Verified Buyer
                     </h2>
                 </header>
@@ -68,11 +68,11 @@
     
             <section class="article__item">
                 <header class="article__header">
-                    <img src="images/image-anne.jpg" alt="Anne Wallace">
-                    <h1>
+                    <img class="comment__img" src="images/image-anne.jpg" alt="Anne Wallace">
+                    <h1 class="comment__title">
                         Anne Wallace
                     </h1>
-                    <h2>
+                    <h2 class="comment__verified">
                         Verified Buyer
                     </h2>
                 </header>
