--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
             Frontend Mentor
         </a>.
-        Coded by <a href="#">@kasokinho</a>.
+        Coded by <a href="https://twitter.com/Kasokinho" target="_blank">@kasokinho</a>.
     </footer>
 </body>
 </html>
