update star unicode to svg

--- a/index.html
+++ b/index.html
@@ -22,13 +22,34 @@
         <aside class="recommend">
             <ul class="recommend__list">
                 <li class="recommend__item">
-                    <span class="recommend__item--star">&#9733; &#9733; &#9733; &#9733; &#9733;</span> Rated 5 Stars in Reviews
+                    <span class="recommend__item--star">
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg">
+                    </span>
+                    Rated 5 Stars in Reviews
                 </li>
                 <li class="recommend__item">
-                    <span class="recommend__item--star">&#9733; &#9733; &#9733; &#9733; &#9733;</span> Rated 5 Stars in Report Guru
+                    <span class="recommend__item--star">
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg">
+                    </span>
+                    Rated 5 Stars in Report Guru
                 </li>
                 <li class="recommend__item">
-                    <span class="recommend__item--star">&#9733; &#9733; &#9733; &#9733; &#9733;</span> Rated 5 Stars in BestTech
+                    <span class="recommend__item--star">
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg"> 
+                        <img src="./images/icon-star.svg">
+                    </span>
+                    Rated 5 Stars in BestTech
                 </li>
             </ul>
         </aside>
