--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
             <ul class="recommend__list">
                 <li class="recommend__item">
                     <span class="recommend__item--star">
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg">
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star">
                     </span>
                     Rated 5 Stars in Reviews
                 </li>
                 <li class="recommend__item">
                     <span class="recommend__item--star">
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg">
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star">
                     </span>
                     Rated 5 Stars in Report Guru
                 </li>
                 <li class="recommend__item">
                     <span class="recommend__item--star">
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg"> 
-                        <img src="./images/icon-star.svg">
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star"> 
+                        <img src="./images/icon-star.svg" alt="star">
                     </span>
                     Rated 5 Stars in BestTech
                 </li>
